--- a/style.css
+++ b/style.css
@@ -23,6 +23,11 @@ h1 {
   height: auto;
 }
 
+.img-item img:hover {
+    cursor: pointer;
+    opacity: .7;
+  }
+
 .img-item p {
   text-align: center;
 }
